   [674798].
 - Hide tab scrolling buttons when they're not needed.
 - Fixed --disable-xlib compiles.
 - Fixed use of %h in dialog-tab buttons [688937].
 - Fixed printing/logging timestamps that contain invalid utf8
   [688548].
 - Added "Resizable userlist" option.
 - Strip colors on topic change.
 - Fixed (snotice) and (notice) tabs being swapped [687437].
 - Made more strings translatable.
 - Allow saving empty text events [691191].
 - 
 - 
 - 


----------------------------------------------------------------------
 2.0.0
----------------------------------------------------------------------

 - Updated translations (de, es, lt, nl, sk, sl).
 - Fixed half cut off dates in notify window.
 - Fixed tabs loosing red/blue color when being renamed.
 - Fixed initial query tabs not being truncated.
 - Make tabs red on channel actions too.
 - Configure script python detection fixes (Johan Dahlin).
 - Added /charset command.
 - Don't auto remove stalled DCCs unless dcc_remove setting is on.
 - Avoid recursive UserCommand buffer overflow.
 - Added xchat_emit_print() to plugin interface.
 - Left and Right positioned tabs are possible again (Lloyd Williams).
 - Added /timer -repeat <num> and -quiet args.
 - Possible tcl plugin crash fixes (Daniel P. Stasinski).
 - Group multiple op/voice in one print event.
 - Fixed plugin loading on solaris.
 - Python fixes (Gustavo Niemeyer):
   * Fixed bug which made Python plugins crash randomly.
   * Introduced a new xchat.hook_unload() function, as requested by
     many people. This will call a given callback at module unload
     time.
   * Now /py load <filename> will succeed if filename is the name of a
     file inside "xchatdir" (~/.xchat2).
   * Fixed some leakings.


----------------------------------------------------------------------
 2.0.0pre1
----------------------------------------------------------------------

 - Updated translations (sv, es, am, el, lv, no).