@@ -6,6 +6,7 @@ GtkWidget *tab_group_add (GtkWidget *group, char *name, void *family, void *user
 GtkOrientation tab_group_get_orientation (GtkWidget *group);
 GtkWidget *tab_group_set_orientation (GtkWidget *group, gboolean vertical);
 int tab_group_resize (GtkWidget *group);
+GtkWidget *tab_group_get_focused (GtkWidget *group);
 
 void tab_focus (GtkWidget *tab);
 void tab_rename (GtkWidget *tab, char *new_name, int trunc_len);
