@@ -20,7 +20,8 @@
  - Strip colors on topic change.
  - Fixed (snotice) and (notice) tabs being swapped [687437].
  - Made more strings translatable.
- - Allow saving empty text events [691191].
+ - Allow loading empty text events [691191].
+ - Fixed xtext race condition [678874].
  - 
  - 
  - 
